# pydreamtv

./: .gitignore  README.md  maxlen.py  pyproject.toml  stream.sh
src/: .env.example  pydreamtv.sql
src/pydreamtv/: bot.py  captest.py  channel.py  controller.py  main.py  playlist.py
